# todo-app

./: README.md
dailyTasks-todo-app/: .env  README.md  pyproject.toml
dailyTasks-todo-app/dailytasks_todo_app/: auth.py  db.py  main.py  models.py  setting.py
dailyTasks-todo-app/dailytasks_todo_app/router/: user.py
dailyTasks-todo-app/tests/: test_main.py
dailytasks-todo-app/: README.md  package-lock.json  package.json  types.d.ts
dailytasks-todo-app/src/actions/: actions.ts
dailytasks-todo-app/src/app/: layout.tsx  page.tsx
dailytasks-todo-app/src/components/ui/: AddTask.tsx  CustomTooltip.tsx  EditTask.tsx  Modal.tsx  SingleTodo.tsx  SubmitButton.tsx  TodoTable.tsx
